--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1413,5 +1413,8 @@
   "StripePaymentForm.idealBankHeading": "Payment",
   "StripePaymentForm.idealBankLabel": "Select your bank",
   "CartPage.emptyCart": "Your cart is empty",
-  "CartPage.goShopping": "Go shopping"
+  "CartPage.goShopping": "Go shopping",
+  "CartPage.clearCart": "Clear cart",
+  "CartCard.outOfStock": "Out of stock",
+  "CartCard.notEnoughStock": "Not enough stock"
 }
