feat: handle generate label after create shipment and save to transaction data

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1470,5 +1470,7 @@
   "UserFieldPhoneNumber.phoneNumberInvalid": "Invalid phone number",
   "TransactionPanel.weArePreparingYourOrder": "We are preparing shipping label for your order...",
   "ShippingMethodForm.customerShippingAddressNotFound": "Customer shipping address not found. Please update your shipping address.",
-  "ShippingMethodForm.providerShippingAddressNotFound": "Provider shipping address not found. Please contact to {marketplaceName} support."
+  "ShippingMethodForm.providerShippingAddressNotFound": "Provider shipping address not found. Please contact to {marketplaceName} support.",
+  "TransactionPanel.shippingLabelLink": "Download your shipping label",
+  "TransactionPanel.trackTraceLink": "Track your shipment"
 }
